# L4-Project-Rust-TAPS-Implementation

./: Cargo.toml  LICENSE  manual.md  readme.md  timelog.md
minutes/December 2021/: 01_12_2021.txt  08_12_2021.txt  15_12_2021.txt
minutes/February 2022/: 02_02_2022.txt  09_02_2022.txt  16_02_2022.txt  23_02_2022.txt
minutes/January 2022/: 12_01_2022.txt  19_01_2022.txt  26_01_2022.txt
minutes/March 2022/: 02_03_2022.txt  09_03_2022.txt  16_03_2022.txt  30_03_2022.txt
minutes/November 2021/: 03_11_2021.txt  18_11_2021.txt  24_11_2021.txt
minutes/October 2021/: 06_10_2021.txt  13_10_2021.txt  20_10_2021.txt  27_10_2021.txt
minutes/September 2021/: 30_09_2021.txt
src/: cert.der  connection.rs  endpoint.rs  error.rs  framer.rs  host.cert  key.der  lib.rs  listener.rs  local_endpoint.rs  main.rs  message.rs  my.der  pre_connection.rs  remote_endpoint.rs  transport_properties.rs
tests/: tests.rs
