[package]
name = "rust-taps-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.8"
quiche = "0.10.0"
log = { version = "0.4", features = ["std"] }
ring = "0.16"
mio-quic = { package = "mio", version = "0.6" }
mio-tls = { package = "mio", version = "0.8", features = ["net", "os-poll"] }
rustls = "0.20.1"
env_logger = "0.9.0"
serde_derive = "1.0"
docopt = "~1.1"
webpki-roots = "0.22"
rustls-pemfile = "0.2.0"
serde = "1.0"