[package]
name = "rust-taps-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.8"
quiche = "0.10.0"
log = { version = "0.4", features = ["std"] }
ring = "0.16"
mio-quic = { package = "mio", version = "0.6" }
env_logger = "0.9.0"
serde_derive = "1.0"
docopt = "~1.1"
webpki-roots = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.1"
async-trait = "0.1.51"
rustls-pemfile = "0.2.1"
http = "0.2.5"
serde = "1.0.130"
trust-dns-resolver = "0.20.3"
quinn = "0.8.0"
futures-util = { version = "0.3.11", default-features = false, features = ["io"] }
tokio-stream = "0.1.8"
async-stream = "0.3.2"
httparse = "1.5.1"
http-muncher = "0.3.2"
rustls-native-certs = "0.6.1"
rcgen = "0.8.14"