[package]
name = "rust-taps-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.8"
log = { version = "0.4", features = ["std"] }
webpki-roots = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.1"
async-trait = "0.1.51"
rustls-pemfile = "0.2.1"
quinn = "0.8.0"
futures-util = { version = "0.3.11", default-features = false, features = ["io"] }
tokio-stream = "0.1.8"
httparse = "1.5.1"
rustls-native-certs = "0.6.1"
rcgen = "0.8.14"